--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Oscar Raygoza",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
