--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-
-# Created by https://www.gitignore.io/api/node
-# Edit at https://www.gitignore.io/?templates=node
-
-### Node ###
 # Logs
 logs
 *.log
@@ -84,4 +79,5 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
-# End of https://www.gitignore.io/api/node
+
+package-lock\.json
