--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
+  },
+  "dependencies": {
+    "cookie-session": "^1.3.3",
+    "method-override": "^3.0.0",
+    "pg": "^7.8.2",
+    "pg-hstore": "^2.3.2",
+    "pug": "^2.0.3",
+    "sequelize": "^4.43.0"
   }
 }
