--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
   "dependencies": {
     "cookie-session": "^1.3.3",
     "method-override": "^3.0.0",
-    "pg": "^7.8.2",
-    "pg-hstore": "^2.3.2",
     "pug": "^2.0.3",
-    "sequelize": "^4.43.0"
+    "sequelize": "^4.43.0",
+    "sqlite3": "^4.0.6"
   }
 }
