--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {
-    "username": "root",
+    "username": null,
     "password": null,
-    "database": "database_development",
+    "database": "work_cloud_db",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "sqlite",
+    "storage": "./work_cloud_db.sqlite3"
   },
   "test": {
     "username": "root",
