--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Proyecto de estadia Red Social para empresas",
   "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.config.js"
+    "start": "webpack-dev-server --open --config webpack.config.js",
+    "initNod": "nodemon server.js"
   },
   "author": "Oscar Raygoza",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.10",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.3",
