--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "cookie-session": "^1.3.3",
+    "mdbootstrap": "^4.7.4",
     "method-override": "^3.0.0",
     "pug": "^2.0.3",
     "sequelize": "^4.43.0",
