--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,18 @@
+
+# Created by https://www.gitignore.io/api/node
+# Edit at https://www.gitignore.io/?templates=node
+
+### Node ###
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
+
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Runtime data
 pids
@@ -79,5 +88,7 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
+# End of https://www.gitignore.io/api/node
 
-package-lock\.json
+
+package-lock.json
