--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "red_social",
+  "name": "work-cloud",
   "version": "1.0.0",
-  "description": "Proyecto de estadia Red Social para empresas",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.config.js",
-    "initNod": "nodemon server.js"
+    "dev": "nodemon src/index.js"
   },
-  "author": "Oscar Raygoza",
-  "license": "ISC",
-  "devDependencies": {
-    "css-loader": "^2.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.18.10",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14"
-  },
+  "author": "OscarRaygoza",
+  "license": "MIT",
   "dependencies": {
-    "cookie-session": "^1.3.3",
-    "mdbootstrap": "^4.7.4",
-    "method-override": "^3.0.0",
-    "pug": "^2.0.3",
-    "sequelize": "^4.43.0",
-    "sqlite3": "^4.0.6"
+    "errorhandler": "^1.5.0",
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
+    "fs-extra": "^7.0.1",
+    "md5": "^2.2.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.19",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
